--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Club Carmed</title>
 </head>
 <body>
-    <div img="carmed-club.jpg";>
-        
+    <div img="carmed-club";>
+
     </div>
 </body>
 </html>
