--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
  
     <main>
         <section>
-            <h3>LANÇAMEN</h3>
+            <h3>@larissaamelio</h3>
             <p>
                 Taylor Swift é uma cantora, compositora e atriz norte-americana. Ela é conhecida por suas músicas de sucesso nos gêneros pop e country, e é uma das artistas mais populares e influentes da indústria musical atualmente.
             </p>
