--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <section>
             <h3>@larissaamelio</h3>
             <p>
-                Taylor Swift é uma cantora, compositora e atriz norte-americana. Ela é conhecida por suas músicas de sucesso nos gêneros pop e country, e é uma das artistas mais populares e influentes da indústria musical atualmente.
+                Novo carmed da Barbie é uma delicia! E aquele brilho, me conquistou.
             </p>
         </section>
     </main>
