--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Taylor's version</title>
+    <title>Carmed Lovers</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -34,7 +34,7 @@
         <section>
             <h3>@larissaamelio</h3>
             <p>
-                Novo carmed da Barbie é uma delicia! E aquele brilho, me conquistou.
+                Novo carmed da Barbie é uma delicia! E aquele brilho me conquistou.
             </p>
         </section>
     </main>
@@ -63,7 +63,8 @@
                 
                 9. "Evermore" (2020)
                  
-                10. "Midningth" (2022)
+                10. 
+                "Midningth" (2022)
             </p>
         </section>
     </main>
