--- a/lancamento.html
+++ b/lancamento.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <div class="center">
+        <div class="centerl">
              <img src="https://conteudo.imguol.com.br/c/noticias/45/2024/05/02/cimed-vai-distribuir-25-mil-unidades-do-carmed-madonna-neste-final-de-semana-no-rio-1714685869941_v2_1x1.jpg">
              
 
