--- a/lancamento.html
+++ b/lancamento.html
@@ -12,8 +12,9 @@
              
 
         </div>
-        <h1>Taylor's version</h1>
-       <h2> Fã Clube da Loirinha</h2>
+        <h1>Carmed Madona</h1>
+       <h2>No dia do show, o Carmed Madonna será distribuído de forma gratuita aos fãs da diva pop que estiverem a caminho da praia de Copacabana. A apresentação da cantora promete ser histórica e marca o encerramento da The Celebration Tour, turnê que comemora os 40 anos de carreira da cantora. O megaevento tem expectativa de 1,5 milhão de pessoas.</h2>
+       <h3></h3>
     </header>
 
     
