--- a/index.html
+++ b/index.html
@@ -32,5 +32,12 @@
 
 </ul>
 </header>
+
+<footer>
+    <a img="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTGf99BDv1LI62JECSh7q4eoFqlaGkciriq5NEFh90R2XPy75zVR2lqLb2CGNgKtVgCu6k&usqp=CAU"
+    <p>GitHub</p>
+    </a>
+</footer>
+
 </body>
 </html>
