--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </header>
 
 <footer>
-    <a img="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTGf99BDv1LI62JECSh7q4eoFqlaGkciriq5NEFh90R2XPy75zVR2lqLb2CGNgKtVgCu6k&usqp=CAU"
+    <a img="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ3kikjv_63_53X3Ahbq5DNaJ3r1EYdJlvTHaFQVxlE9-AkJyU7llSBN8EM1GKoNjQxhYE&usqp=CAU">
     <p>GitHub</p>
     </a>
 </footer>
