--- a/barbie.html
+++ b/barbie.html
@@ -14,5 +14,10 @@
              65 anos da Barbie. 
             A linha de produtos Carmed Barbie inclui hidratantes labiais e outros itens de cuidados pessoais inspirados na icônica boneca.
         </p>
+        <p>
+            A linha de Hidratantes Labiais Carmed Barbie inclui diferentes opções, tais como o "Carmed Barbie Rose Gold", "Carmed Barbie Pink", e "Hidratante Labial 
+            Carmed Barbie Crystal". 
+            Cada produto oferece benefícios de hidratação e cuidados com os lábios, inspirados na icônica boneca Barbie.
+        </p>
     </section>
 </main>
