--- a/lancamento.html
+++ b/lancamento.html
@@ -1,22 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <header>
-        <div class="center">
-             <img class="lancamento_imagem" src="https://conteudo.imguol.com.br/c/noticias/45/2024/05/02/cimed-vai-distribuir-25-mil-unidades-do-carmed-madonna-neste-final-de-semana-no-rio-1714685869941_v2_1x1.jpg">
-             
 
-        </div>
-        <h1>Carmed Madona</h1>
-       <h2>No dia do show, o Carmed Madonna será distribuído de forma gratuita aos fãs da diva pop que estiverem a caminho da praia de Copacabana. A apresentação da cantora promete ser histórica e marca o encerramento da The Celebration Tour, turnê que comemora os 40 anos de carreira da cantora. O megaevento tem expectativa de 1,5 milhão de pessoas.</h2>
-       <h3></h3>
-    </header>
+<header>
+    <body>
+        <style>
+            body {
+                background-image: url("https://conteudo.imguol.com.br/c/noticias/45/2024/05/02/cimed-vai-distribuir-25-mil-unidades-do-carmed-madonna-neste-final-de-semana-no-rio-1714685869941_v2_1x1.jpg");
+                background-size: cover;
+                background-repeat: no-repeat;
+            }
+        </style>
+    </body>
+    <h1>CARMED MADONNA</h1>
+</header>
 
-    
-</body>
-</html>
+<main>
+    <section>
+        <h2>Sobre o Carmed</h2>
+        <p>
+            No dia do show, o Carmed Madonna será distribuído de forma gratuita aos fãs da diva pop que estiverem a caminho da praia de Copacabana. 
+            A apresentação da cantora promete ser histórica e marca o encerramento da The Celebration Tour, 
+            turnê que comemora os 40 anos de carreira da cantora. O megaevento tem expectativa de 1,5 milhão de pessoas.
+        </p>
+    </section>
+</main>
