--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </header>
 
 <footer>
-    <a img="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ3kikjv_63_53X3Ahbq5DNaJ3r1EYdJlvTHaFQVxlE9-AkJyU7llSBN8EM1GKoNjQxhYE&usqp=CAU">
+    <a img= "github_png">
     <p>GitHub</p>
     </a>
 </footer>
