--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </header>
 
 <footer>
-    <a href="github.pngc">
+    <a href="https://github.com/lariamelio">
     <p>GitHub</p>
     </a>
 </footer>
